--- a/web/css/main.css
+++ b/web/css/main.css
@@ -3,9 +3,25 @@
 	width: 800px;
 }
 
+.movie-index {
+	width: 500px;
+	height: 300px;
+	margin: auto;
+	background-color: #92DEEC;
+	padding: 20px;
+	-moz-border-radius: 20px;
+	-webkit-border-radius: 20px;
+}
+
 .movie-index img {
 	width: 170px;
 	height: 170px;
+}
+
+.movie-index .no-image {
+	width: 170px;
+	height: 170px;
+	border-style: solid;
 }
 
 .movie-index dt {
@@ -18,14 +34,7 @@
 	float: right;
 }
 
-.movie-index a {
+.movie-index .movie-links {
 	float: right;
 }
 
-.movie-index {
-	width: 500px;
-	height: 300px;
-	margin: auto;
-	background-color: #92DEEC;
-	padding: 20px;
-}
