added more fixtures

--- a/web/css/movie_index.css
+++ b/web/css/movie_index.css
@@ -1,7 +1,7 @@
 .movie-index {
 	width: 500px;
 	height: 330px;
-	margin: auto;
+	margin: 20px auto;
 	background-color: #92DEEC;
 	padding: 20px;
 	-moz-border-radius: 20px;
