--- a/web/css/movie_show.css
+++ b/web/css/movie_show.css
@@ -9,9 +9,25 @@
 }
 
 #movie-synopsis {
-	width: 530px;
+    -moz-border-radius: 20px 20px 20px;
+    background-color: #FFF0D4;
+    padding: 10px;
+    margin-bottom:50px;
+    width: 530px;
 }
 
 #movie-meta {
+        -moz-border-radius: 20px 20px 20px;
+        background-color: #F8ECE0;
 	float: right;
+	width:200px;
+	padding:10px;
+}
+
+.container{
+    margin: 10px;
+}
+
+#trailer {
+    margin-left:5%;
 }
