--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,12 +1,35 @@
+body {
+    background-color:#A9D0F5
+}
+
+h1 {
+    margin-left: 40%;
+}
 dt {
 	font-weight: bold;
 }
 
 #content {
+        
 	margin: auto;
 	width: 800px;
 }
 
 .no-image {
 	border-style: solid;
+}
+
+a{
+    color:black;
+}
+a:hover{
+    font-size:20px;
+}
+
+.user_nav{
+    
+}
+
+.add-link{
+    text-decoration: none;
 }
