--- a/web/css/movie_show.css
+++ b/web/css/movie_show.css
@@ -17,17 +17,24 @@
 }
 
 #movie-meta {
-        -moz-border-radius: 20px 20px 20px;
-        background-color: #F8ECE0;
-	float: right;
-	width:200px;
-	padding:10px;
-}
-
-.container{
-    margin: 10px;
+ 		-moz-border-radius: 20px 20px 20px;
+  	background-color: #F8ECE0;
+		float: right;
+		width:200px;
+		padding:10px;
 }
 
 #trailer {
-    margin-left:5%;
+  margin-left: 5%;
+}
+
+#movie-info #rating {
+	clear: both;
+	float: right;
+	margin: 10px 15px;
+}
+
+#movie-info #rating strong {
+	margin-top: 5px;
+	float: right;
 }
